m3s-mm-api/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: m3s-mm-api
  labels:
    app: mm-api
    project: m3s
