m3s-mm-api/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mm-api
  namespace: m3s-mm-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mm-api
  template:
    metadata:
      labels:
        app: mm-api
        project: m3s
    spec:
      containers:
        - name: mm-api
          image: devopspcs/mm-api-go:latest  # Tag akan di-update oleh Jenkins via Git commit
          ports:
            - containerPort: 8002
          volumeMounts:
            - name: gcp-credentials
              mountPath: /app/service_account_credential.json
              subPath: service_account_credential.json
              readOnly: true
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          readinessProbe:
            httpGet:
              path: /health
              port: 8002
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8002
            initialDelaySeconds: 10
            periodSeconds: 30
      volumes:
        - name: gcp-credentials
          secret:
            secretName: mm-api-gcp-credentials
      imagePullSecrets:
        - name: dockerhub-pull
