m3s-mm-api/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mm-api
  namespace: m3s-mm-api
spec:
  type: ClusterIP
  selector:
    app: mm-api
  ports:
    - name: http
      port: 8002
      targetPort: 8002
